<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

  <item
      android:title=""
      android:icon="@drawable/ic_action_new"
      app:showAsAction="always"
      >

      <menu>
          <item
              android:id="@+id/add_contact"
              android:icon="@drawable/ic_add_contact"
              android:title="@string/add_contact"
              app:showAsAction="withText"
              />
          <item
              android:id="@+id/scan"
              android:icon="@drawable/ic_scan"
              android:title="@string/qr_scan"
              app:showAsAction="withText"
              />
          <item
              android:id="@+id/new_group"
              android:icon="@drawable/ic_new_group"
              android:title="@string/new_group"
              app:showAsAction="withText"
              />

      </menu>

  </item>

</menu>