<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/view_toolbar" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="50dp"
        android:text="@string/input_user_password"
        android:textColor="@color/text_gray"
        android:textSize="@dimen/text_small" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <TextView
            android:id="@+id/tv_set_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:background="@color/white"
            android:text="@string/set_password"
            android:textColor="@color/text_black"
            android:textSize="@dimen/text_normal" />

        <EditText
            android:id="@+id/et_set_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/tv_set_password"
            android:background="@color/white"
            android:hint="@string/password_restriction"
            android:inputType="textPassword"
            android:paddingRight="16dp"
            android:singleLine="true"
            android:textColor="@color/text_black"
            android:textColorHint="@color/text_gray"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/text_normal"
            android:digits="0123456789"
            android:maxLength="6" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/tv_verify_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:background="@color/white"
            android:text="@string/verify_password"
            android:textColor="@color/text_black"
            android:textSize="@dimen/text_normal" />

        <EditText
            android:id="@+id/et_verify_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/tv_verify_password"
            android:background="@color/white"
            android:hint="@string/verify_password_again"
            android:inputType="textPassword"
            android:paddingRight="16dp"
            android:singleLine="true"
            android:textColor="@color/text_black"
            android:textColorHint="@color/text_gray"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/text_normal"
            android:digits="0123456789"
            android:maxLength="6"/>

    </RelativeLayout>

    <Button
        android:id="@+id/btn_next_step"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_yellow_round_selector"
        android:text="@string/next_step"
        android:textColor="@color/white"
        android:textSize="16sp" />

</LinearLayout>
