<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/view_toolbar" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <TextView
            android:id="@+id/tv_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:background="@color/white"
            android:text="@string/phone_number"
            android:textColor="@color/text_black"
            android:textSize="@dimen/text_normal" />

        <EditText
            android:id="@+id/et_phone_number"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/tv_phone_number"
            android:background="@color/white"
            android:hint="@string/phone_number_get_verification_code"
            android:inputType="phone"
            android:paddingRight="16dp"
            android:singleLine="true"
            android:textColor="@color/text_black"
            android:textColorHint="@color/text_gray"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/text_normal" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/tv_verification_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:background="@color/white"
            android:text="@string/verification_code"
            android:textColor="@color/text_black"
            android:textSize="@dimen/text_normal" />

        <EditText
            android:id="@+id/et_verification_code"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_marginTop="10dp"
            android:layout_toLeftOf="@+id/btn_get_verification_code_sms"
            android:layout_toRightOf="@id/tv_verification_code"
            android:background="@color/white"
            android:hint="@string/input_verification_code"
            android:paddingRight="16dp"
            android:singleLine="true"
            android:textColor="@color/text_black"
            android:textColorHint="@color/text_gray"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/text_normal" />

        <Button
            android:id="@+id/btn_get_verification_code_sms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:background="@drawable/btn_grey_round_selector"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/get_verification_code_sms"
            android:textColor="@color/text_black" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rl_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:background="@color/white"
            android:text="密      码："
            android:textColor="@color/text_black"
            android:textSize="@dimen/text_normal" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/tv_password"
            android:background="@color/white"
            android:hint="请输入6位数字密码"
            android:inputType="phone"
            android:paddingRight="16dp"
            android:singleLine="true"
            android:textColor="@color/text_black"
            android:textColorHint="@color/text_gray"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/text_normal" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rl_confirm_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <TextView
            android:id="@+id/tv_second_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:background="@color/white"
            android:text="确认密码："
            android:textColor="@color/text_black"
            android:textSize="@dimen/text_normal" />

        <EditText
            android:id="@+id/et_second_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/tv_second_password"
            android:background="@color/white"
            android:hint="请输入6位数字密码"
            android:inputType="phone"
            android:paddingRight="16dp"
            android:singleLine="true"
            android:textColor="@color/text_black"
            android:textColorHint="@color/text_gray"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/text_normal" />
    </RelativeLayout>


    <Button
        android:id="@+id/btn_next_step"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_yellow_round_selector"
        android:text="@string/next_step"
        android:textColor="@color/white"
        android:textSize="16sp" />

</LinearLayout>
